--- a/F446RE_PIN_CONFIG.ioc
+++ b/F446RE_PIN_CONFIG.ioc
@@ -8,137 +8,142 @@ FATFS0.BSP.component=
 FATFS0.BSP.condition=
 FATFS0.BSP.i2caddr=0
 FATFS0.BSP.i2creg=
-FATFS0.BSP.instance=PC5
+FATFS0.BSP.instance=PA8
 FATFS0.BSP.ip=GPIO
 FATFS0.BSP.mode=Input
 FATFS0.BSP.name=Detect_SDIO
 FATFS0.BSP.semaphore=
-FATFS0.BSP.solution=PC5
+FATFS0.BSP.solution=PA8
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2S2.ErrorAudioFreq=0.15 %
+I2S2.AudioFreq=I2S_AUDIOFREQ_48K
+I2S2.ClockSource-Half_Duplex_Master=I2S_CLOCK_PLLSRC
+I2S2.ErrorAudioFreq=1.72 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_DISABLE
-I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode
+I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFreq,Mode,AudioFreq,ClockSource-Half_Duplex_Master
 I2S2.Instance=SPI$Index
 I2S2.Mode=I2S_MODE_MASTER_RX
-I2S2.RealAudioFreq=8.012 KHz
+I2S2.RealAudioFreq=48.828 KHz
 I2S2.VirtualMode=I2S_MODE_MASTER
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
-Mcu.IP1=I2C1
-Mcu.IP2=I2S2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SAI1
+Mcu.IP1=FREERTOS
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=I2S2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
 Mcu.IP6=SDIO
 Mcu.IP7=SPI1
 Mcu.IP8=SYS
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=11
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB2
-Mcu.Pin14=PB10
-Mcu.Pin15=PB12
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PC8
-Mcu.Pin19=PA9
-Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PC11
-Mcu.Pin23=PD2
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB7
-Mcu.Pin27=PB8
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_FATFS_VS_SDIO
-Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin4=PC1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.Pin0=PH0-OSC_IN
+Mcu.Pin1=PH1-OSC_OUT
+Mcu.Pin10=PC9
+Mcu.Pin11=PA8
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PC10
+Mcu.Pin17=PC11
+Mcu.Pin18=PC12
+Mcu.Pin19=PD2
+Mcu.Pin2=PA5
+Mcu.Pin20=PB3
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_FATFS_VS_SDIO
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_SYS_VS_tim6
+Mcu.Pin26=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB15
+Mcu.Pin8=PC6
+Mcu.Pin9=PC8
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:true
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA9.Mode=SAI_B_Master
-PA9.Signal=SAI1_SD_B
-PB0.Mode=SD_4_bits_Wide_bus
-PB0.Signal=SDIO_D1
-PB1.Mode=SD_4_bits_Wide_bus
-PB1.Signal=SDIO_D2
-PB10.Mode=Half_Duplex_Master
-PB10.Signal=I2S2_CK
-PB12.Mode=SAI_B_Master
-PB12.Signal=SAI1_SCK_B
-PB14.Locked=true
-PB14.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=SDIO_BSD_Input
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PB12.Mode=Half_Duplex_Master
+PB12.Signal=I2S2_WS
+PB13.Locked=true
+PB13.Mode=Half_Duplex_Master
+PB13.Signal=I2S2_CK
 PB15.Locked=true
-PB15.Signal=GPIO_Output
-PB2.Mode=SD_4_bits_Wide_bus
-PB2.Signal=SDIO_CK
+PB15.Mode=Half_Duplex_Master
+PB15.Signal=I2S2_SD
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
-PB4.Mode=Half_Duplex_Master
-PB4.Signal=I2S2_WS
+PB6.Locked=true
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
-PB9.Mode=SAI_B_Master
-PB9.Signal=SAI1_FS_B
-PC1.Mode=Half_Duplex_Master
-PC1.Signal=I2S2_SD
+PC10.Locked=true
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDIO_D2
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC5.Locked=true
-PC5.Signal=GPIO_Input
+PC12.Locked=true
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDIO_CK
+PC6.Mode=Master_Clock_Activated
+PC6.Signal=I2S2_MCK
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
+PC9.Locked=true
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDIO_D1
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
 PH0-OSC_IN.Mode=HSE-External-Oscillator
@@ -173,26 +178,26 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDIO_SD_Init-SDIO-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_SAI1_Init-SAI1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
-RCC.AHBFreq_Value=180000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDIO_SD_Init-SDIO-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=45000000
-RCC.APB1TimFreq_Value=90000000
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=90000000
-RCC.APB2TimFreq_Value=180000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=168000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=180000000
-RCC.FCLKCortexFreq_Value=180000000
-RCC.FMPI2C1Freq_Value=45000000
+RCC.CortexFreq_Value=168000000
+RCC.FCLKCortexFreq_Value=168000000
+RCC.FMPI2C1Freq_Value=42000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=180000000
+RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=16000000
 RCC.I2S1Freq_Value=50000000
 RCC.I2S2Freq_Value=50000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIM,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.MCO2PinFreq_Value=180000000
-RCC.PLLCLKFreq_Value=180000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SM,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIM,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.MCO2PinFreq_Value=168000000
+RCC.PLLCLKFreq_Value=168000000
 RCC.PLLI2SM=8
 RCC.PLLI2SN=50
 RCC.PLLI2SPCLKFreq_Value=50000000
@@ -200,47 +205,50 @@ RCC.PLLI2SQCLKFreq_Value=50000000
 RCC.PLLI2SRCLKFreq_Value=50000000
 RCC.PLLI2SoutputFreq_Value=50000000
 RCC.PLLM=8
-RCC.PLLN=180
-RCC.PLLQ=8
-RCC.PLLQCLKFreq_Value=45000000
-RCC.PLLRCLKFreq_Value=180000000
+RCC.PLLN=168
+RCC.PLLQ=7
+RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLRCLKFreq_Value=168000000
 RCC.PLLSAIM=8
 RCC.PLLSAIN=50
-RCC.PLLSAIPCLKFreq_Value=50000000
+RCC.PLLSAIP=RCC_PLLSAIP_DIV4
+RCC.PLLSAIPCLKFreq_Value=25000000
 RCC.PLLSAIQCLKFreq_Value=50000000
-RCC.PLLSAIoutputFreq_Value=50000000
+RCC.PLLSAIoutputFreq_Value=25000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=180000000
+RCC.PWRFreq_Value=168000000
 RCC.SAIAFreq_Value=50000000
 RCC.SAIBFreq_Value=50000000
-RCC.SDIOFreq_Value=45000000
-RCC.SPDIFRXFreq_Value=180000000
-RCC.SYSCLKFreq_VALUE=180000000
+RCC.SDIOFreq_Value=48000000
+RCC.SPDIFRXFreq_Value=168000000
+RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.USBFreq_Value=45000000
+RCC.USBFreq_Value=48000000
 RCC.VCOI2SInputFreq_Value=2000000
 RCC.VCOI2SOutputFreq_Value=100000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=360000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VCOSAIInputFreq_Value=2000000
 RCC.VCOSAIOutputFreq_Value=100000000
-SAI1.AudioMode-SAI_B_Master=SAI_MODEMASTER_RX
-SAI1.ErrorAudioFreq-SAI_B_Master=-2.34 %
-SAI1.IPParameters=Instance-SAI_B_Master,VirtualMode-SAI_B_Master,MClockEnable-SAI_B_Master,RealAudioFreq-SAI_B_Master,ErrorAudioFreq-SAI_B_Master,AudioMode-SAI_B_Master
-SAI1.Instance-SAI_B_Master=SAI$Index_Block_B
-SAI1.MClockEnable-SAI_B_Master=SAI_MASTERCLOCK_DISABLE
-SAI1.RealAudioFreq-SAI_B_Master=187.5 KHz
-SAI1.VirtualMode-SAI_B_Master=VM_MASTER
-SPI1.CalculateBaudRate=45.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 isbadioc=false
